--- a/project_list.html
+++ b/project_list.html
@@ -4,49 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>후원하기 — Project.PAW</title>
-
-  <!-- 페이지 전용 스타일 (다른 페이지에 영향 없음) -->
   <style>
     :root{
-      --paw-primary:#1f6feb; --ink:#0b1220; --muted:#6b7280; --bg:#f7f9fc; --card:#fff;
-      --line:#e5e7eb; --radius:16px; --shadow:0 10px 24px rgba(16,24,40,.08);
+      --primary:#1f6feb; --muted:#6b7280; --bg:#f8fafc; --card:#fff; --line:#e5e7eb;
+      --radius:18px; --shadow:0 12px 30px rgba(16,24,40,.08);
     }
     *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:#111827;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    html,body{margin:0;background:var(--bg);color:#0f172a;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
     a{text-decoration:none;color:inherit}
-    .container{max-width:1100px;margin:0 auto;padding:0 16px}
+    .container{max-width:1120px;margin:0 auto;padding:0 16px}
     .topbar{position:sticky;top:0;z-index:10;background:#fff;border-bottom:1px solid var(--line)}
     .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-    .brand{font-weight:800;letter-spacing:.2px}
+    .brand{font-weight:900}
     .nav{display:flex;gap:8px}
     .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;cursor:pointer}
     .btn.ghost{background:#11182710}
-    .btn.primary{background:var(--paw-primary);color:#fff}
+    .btn.primary{background:var(--primary);color:#fff}
     .section{padding:28px 0}
-    h1{margin:0 0 8px 0;font-size:clamp(20px,3vw,28px);font-weight:800}
-    .row{display:flex;gap:12px}
-    .between{justify-content:space-between}
-    .center{align-items:center}
     .kicker{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted);font-weight:800}
-    .controls{gap:10px}
+    h1{margin:0 0 6px 0;font-size:clamp(22px,3.4vw,30px);font-weight:900}
+    .controls{display:flex;gap:10px;align-items:center}
     select,input[type="checkbox"]{padding:10px 12px;border:1px solid var(--line);border-radius:12px;background:#fff}
-    .list-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:16px}
-    .card{background:var(--card);border-radius:var(--radius);border:1px solid var(--line);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column;transition:transform .12s ease}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:16px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;transition:transform .12s}
     .card:hover{transform:translateY(-2px)}
-    .thumb{width:100%;height:180px;object-fit:cover;background:#eef2ff}
-    .info{padding:14px 14px 16px}
-    .title{margin:0;font-size:18px}
-    .summary{margin:6px 0 10px 0;color:#374151;line-height:1.4}
+    .thumb{width:100%;height:200px;object-fit:cover;background:#eef2ff}
+    .pad{padding:14px 14px 16px}
     .muted{color:#6b7280}
     .badge{font-size:12px;padding:4px 8px;border-radius:999px}
     .badge.approved{background:#eafff2;color:#0a6b3c}
     .badge.pending{background:#fff6e6;color:#a15a00}
-    .progress{width:100%;height:8px;background:#f3f4f6;border-radius:999px;overflow:hidden;margin-top:10px;margin-bottom:6px}
-    .progress i{display:block;height:100%;background:var(--paw-primary);width:0%}
-    .skeleton{position:relative;min-height:260px;background:linear-gradient(90deg,#f4f6fb 25%,#eef2f7 37%,#f4f6fb 63%);background-size:400% 100%;animation:shimmer 1.4s infinite}
+    .progress{width:100%;height:8px;background:#f3f4f6;border-radius:999px;overflow:hidden;margin:10px 0 6px}
+    .progress i{display:block;height:100%;background:var(--primary);width:0%}
+    .skeleton{position:relative;min-height:260px;background:linear-gradient(90deg,#f4f6fb 25%,#eef2f7 37%,#f4f6fb 63%);background-size:400% 100%;animation:shimmer 1.4s infinite;border-radius:var(--radius)}
     @keyframes shimmer{0%{background-position:100% 0}100%{background-position:-100% 0}}
     .empty{padding:36px;text-align:center;border:1px dashed #cbd5e1;border-radius:16px;background:#fff;color:#64748b}
-    footer{padding:40px 0;color:#94a3b8;font-size:14px}
+    footer{border-top:1px solid var(--line);margin-top:28px}
+    .footer-inner{display:flex;justify-content:space-between;align-items:center;padding:24px 0;color:#94a3b8;font-size:14px}
+    .footer-nav{display:flex;gap:12px}
+    .footer-link{color:#64748b}
   </style>
 </head>
 <body>
@@ -62,16 +58,16 @@
 
   <main class="container">
     <section class="section">
-      <div class="row between center">
+      <div style="display:flex;justify-content:space-between;align-items:center;gap:12px">
         <div>
           <div class="kicker">Explore</div>
           <h1>모든 프로젝트</h1>
         </div>
-        <div class="row center controls">
-          <label class="row center" style="gap:6px">
-            <input id="onlyApproved" type="checkbox" /> 승인만 보기
+        <div class="controls">
+          <label style="display:flex;align-items:center;gap:6px">
+            <input id="onlyApproved" type="checkbox"/> 승인만 보기
           </label>
-          <select id="sort" title="정렬 방식">
+          <select id="sort">
             <option value="latest">최신순</option>
             <option value="progress">달성률순</option>
             <option value="goal">목표금액 높은순</option>
@@ -79,15 +75,20 @@
         </div>
       </div>
 
-      <div id="list" class="list-grid" style="margin-top:16px"></div>
+      <div id="list" class="grid" style="margin-top:16px"></div>
     </section>
   </main>
 
-  <footer class="container">
-    <span class="muted">© Project.PAW</span>
+  <footer>
+    <div class="container footer-inner">
+      <span>© Project.PAW</span>
+      <nav class="footer-nav">
+        <a class="footer-link" href="about.html">About</a>
+        <a class="footer-link" href="login.html">로그인</a>
+      </nav>
+    </div>
   </footer>
 
-  <!-- 기능 스크립트 -->
   <script type="module">
     import "./js/firebase.js";
     import { storage, fmt } from "./js/app.js";
@@ -98,18 +99,17 @@
     const onlyApproved = document.querySelector("#onlyApproved");
 
     const skeletons = () => {
-      wrap.innerHTML = Array.from({ length: 6 })
-        .map(() => `<a class="card skeleton" href="javascript:void(0)"></a>`).join("");
+      wrap.innerHTML = Array.from({ length: 8 })
+        .map(()=> `<div class="skeleton"></div>`).join("");
     };
 
     function createdAtSeconds(x){
-      // Firestore serverTimestamp() 객체 -> seconds 읽기
-      return (x && typeof x === 'object' && 'seconds' in x) ? x.seconds : 0;
+      return (x && typeof x==='object' && 'seconds' in x) ? x.seconds : 0;
     }
 
     async function render(){
       skeletons();
-      let items = await storage.getAll(); // Firestore에서 로드
+      let items = await storage.getAll();
 
       if(onlyApproved?.checked){
         items = items.filter(p => (p.status || "pending") === "approved");
@@ -135,14 +135,14 @@
         return `
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}" aria-label="프로젝트 ${esc(p.title||'')} 상세 보기">
             <img class="thumb" src="${cover}" alt="대표 이미지" />
-            <div class="info">
-              <div class="row between center" style="gap:8px">
-                <h3 class="title">${esc(p.title || '')}</h3>
+            <div class="pad">
+              <div style="display:flex;justify-content:space-between;align-items:center;gap:8px">
+                <h3 style="margin:0;font-size:18px">${esc(p.title || '')}</h3>
                 ${badge}
               </div>
-              <p class="summary">${esc(p.summary || '')}</p>
+              <p class="muted" style="margin:6px 0 10px 0">${esc(p.summary || '')}</p>
               <div class="progress"><i style="width:${pct}%"></i></div>
-              <div class="row muted" style="gap:12px;">
+              <div class="muted" style="display:flex;gap:12px;">
                 <span>목표 ${fmt(p.targetAmount)}원</span>
                 <span>구조자 ${fmt(p.selfPayAmount)}원</span>
               </div>
